Blog backend (tested api)
