# backend/app/Http/Resources/Admin/Blog/BlogResource.php
@@ -1,0 +1,28 @@
+<?php
+
+namespace App\Http\Resources\Admin\Blog;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class BlogResource extends JsonResource
+{
+    /**
+     * Biến đổi dữ liệu Coupon thô thành JSON chuẩn trả về cho client.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'id' => $this->id,
+            'name' => $this->name,
+            'slug' => $this->slug,
+            'description' => $this->description,
+            'image' => $this->image,
+            'status' => $this->status,
+            'created_at' => $this->created_at?->format('d/m/Y H:i'),
+            'updated_at' => $this->updated_at?->format('d/m/Y H:i'),
+        ];
+    }
+}
