# backend/app/Models/Blog.php
@@ -1,0 +1,15 @@
+<?php
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+
+class Blog extends Model
+{
+    protected $fillable = [
+        'name',
+        'slug',
+        'description',
+        'image',
+        'status',
+    ];
+}       
